update with other views

--- a/index.qmd
+++ b/index.qmd
@@ -8,4 +8,6 @@ Setting up CI for quarto website build & publish.
 
 Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit
 
+Ci sono gli altri visti
+
 ![workflow picture](image/badge.svg)
